# nsduh_modelling

./: .gitattributes  .gitignore  README.md  README.rst  pyproject.toml
cj_pipeline/: calculate_rais.py  compare_cates.py  config.py  counterfactual_matching.py  ogrs3_coefs.py  plot_arrests.py  plot_crime_dist.py  synthetic_assignment.py  utils.py
cj_pipeline/ncvs/: load.py  preprocess.py  run.py
cj_pipeline/neulaw/: assignment_preprocessing.py  load.py  preprocess.py  run.py
cj_pipeline/nsduh/: load.py  model.py  preprocess.py  preprocessing.py  run.py
cj_pipeline/results/: compare.py  compare_ates.py  compare_cates.py  plot_arrests.py  plot_rai_comparison.py  utils.py
data/neulaw/: HC-crime-codes---Offenses.csv  hc.csv  neulaw_offensecat.csv
data/nsduh/: NHSDA-1999-DS0001-data-stata.dta  NHSDA-2000-DS0001-data-stata.dta  NHSDA-2001-DS0001-data-stata.dta  NSDUH_1992_Tab.txt  NSDUH_1993_Tab.txt  NSDUH_1994_Tab.txt  NSDUH_1995_Tab.txt  NSDUH_1996_Tab.txt  NSDUH_1997_Tab.txt  NSDUH_1998_Tab.txt  NSDUH_2002_Tab.txt  NSDUH_2003_Tab.txt  NSDUH_2004_Tab.txt  NSDUH_2005_Tab.txt  NSDUH_2007_Tab.txt  NSDUH_2008_Tab.txt  NSDUH_2009_Tab.txt  NSDUH_2010_Tab.txt  NSDUH_2011_Tab.txt  NSDUH_2012_Tab.txt  NSDUH_2013_Tab.txt  NSDUH_2014_Tab.txt  NSDUH_2016_Tab.txt  NSDUH_2018_Tab.txt
data/processed/: criminal_history.csv  ncvs.csv  nsduh.csv  synth_crimes.csv
data/rais/: calculated_rais.csv  coef_ogrs3.csv
nsduh_model/: load.py  model.py  preprocessing.py
tests/: test_data_loading.py
